# legacy-GDMP-Server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  PACKET.md  README.md
include/: main.hpp
src/: main.cpp  main.hpp
